@@ -23,6 +23,7 @@ version 0.9.2 - Not released, available at https://simupop.svn.sourceforge.net/s
   - NEW: Allow single parameter to parameters loci, ploidy in initByValue and initByFreq.
   - NEW: Remove parameter chrom from dumper(), allow single parameter input for 
 		parameter loci in this operator.
+  - NEW: Add pause operator to accept specified keys.
 		
 
 version 0.9.1 - (Rev 2330) Jan 13, 2009
